added social icons

--- a/mendicants/index.html
+++ b/mendicants/index.html
@@ -11,8 +11,14 @@
 
     <title>Cover Template for Bootstrap</title>
 
-    <!-- Bootstrap core CSS -->
+    <!-- Bootstrap core CSS (maxcdn) -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Font Awesome (maxcdn)  -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+    <!-- Bootstrap social (for fb/twitter/etc. icons) -->
+    <link rel="stylesheet" href="assets/bootstrap-social.css">
 
     <!-- Custom styles for this template -->
     <link href="cover.css" rel="stylesheet">
@@ -38,11 +44,11 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand">Cover</h3>
+              <h3 class="masthead-brand">The Stanford Mendicants</h3>
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">Features</a></li>
+                  <li><a href="#">About Us</a></li>
                   <li><a href="#">Contact</a></li>
                 </ul>
               </nav>
@@ -50,16 +56,38 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Cover your page.</h1>
+            <h1 class="cover-heading">Stanford's Original A Cappella Group.</h1>
+            <!--
             <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
             <p class="lead">
               <a href="#" class="btn btn-lg btn-default">Learn more</a>
             </p>
+            -->
           </div>
 
           <div class="mastfoot">
             <div class="inner">
-              <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+              <a class="btn btn-social-icon btn-twitter">
+                <i class="fa fa-twitter"></i>
+              </a>
+              <a class="btn btn-social-icon btn-facebook">
+                <i class="fa fa-facebook"></i>
+              </a>
+              <a class="btn btn-social-icon btn-flickr">
+                <i class="fa fa-envelope-o"></i>
+              </a>
+              <a class="btn btn-social-icon btn-spotify">
+                <i class="fa fa-spotify"></i>
+              </a>
+              <a class="btn btn-social-icon btn-google">
+                <i class="fa fa-youtube"></i>
+              </a>
+              <a class="btn btn-social-icon btn-microsoft">
+                <i class="fa fa-apple"></i>
+              </a>
+              <!-- <p>Cover template for <a
+              href="http://getbootstrap.com">Bootstrap</a>, by <a
+              href="https://twitter.com/mdo">@mdo</a>.</p> -->
             </div>
           </div>
 
