added about page

--- a/mendicants/about.html
+++ b/mendicants/about.html
@@ -34,7 +34,7 @@
     <![endif]-->
   </head>
 
-  <body class="bg-jump">
+  <body class="bg-london">
 
     <div class="site-wrapper">
 
@@ -47,8 +47,8 @@
               <h3 class="masthead-brand">The Stanford Mendicants</h3>
               <nav>
                 <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="about.html">About Us</a></li>
+                  <li><a href="index.html">Home</a></li>
+                  <li class="active"><a href="about.html">About Us</a></li>
                   <li><a href="#">Contact</a></li>
                 </ul>
               </nav>
