added contacts page, content to about page

--- a/mendicants/contact.html
+++ b/mendicants/contact.html
@@ -34,7 +34,7 @@
     <![endif]-->
   </head>
 
-  <body class="bg-london">
+  <body class="bg-pointing">
 
     <div class="site-wrapper">
 
@@ -48,51 +48,16 @@
               <nav>
                 <ul class="nav masthead-nav">
                   <li><a href="index.html">Home</a></li>
-                  <li class="active"><a href="about.html">About Us</a></li>
-                  <li><a href="contact.html">Contact</a></li>
+                  <li><a href="about.html">About Us</a></li>
+                  <li class="active"><a href="contact.html">Contact</a></li>
                 </ul>
               </nav>
             </div>
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Stanford's Original A Cappella Group.</h1>
-
-            <p class="lead">
-              The Mendicants are 14 guys devoted to performing the best songs of today, yesterday and several decades ago. We pride ourselves on our wide range of styles, from gospel and barbershop to original compositions, jazz standards and contemporary pop. You can see us on stage, serenading in stairwells, or even just breaking out into song around campus. And if you can’t find us? Just follow the trail of swooning women… we won’t be far ahead.
-            </p>
-            
-          <!-- Trigger the modal with a button -->
-          <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#historyModal">Our History</button>
-
-          <!-- Modal -->
-          <div id="historyModal" class="modal modal-vcenter fade" role="dialog">
-            <div class="modal-dialog">
-
-              <!-- Modal content-->
-              <div class="modal-content history">
-                <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal">&times;</button>
-                  <h4 class="modal-title">Our History</h4>
-                </div>
-                <div class="modal-body">
-                  <p>Legend has it that the Mendicants were founded in 1963 by a transfer student from Yale by the name of Hank Adams. Actually that part’s not really legend. He definitely transferred here and he definitely started the group with 5 other guys. What happened next, however, has been obscured by the mists of time. They say that the group originally rehearsed only one song that they performed for the first time one lunchtime in Branner Hall, then all-female housing. As they sang, the hall rang with beautiful music and soon there wasn’t a dry eye in the house. When they finished, there was a tumultuous explosion of applause as co-ed undergrads threw themselves at the stunned Mendicants, clamoring for more. The terrified members, having only rehearsed one song, beat a hasty retreat through a convenient nearby window and immediately returned to rehearsal. The rest, as they say, is history.</p>
-
-                  <p>Over the years, we’ve experimented with several different looks and musical styles. We started off in tuxes and suits, but we’ve gone through everything from baseball uniforms to shorts and sandals. Ever since, we’ve been running around with “heaped spoonfuls of boyish charm” (Stanford Daily, 2002) winning the hearts of women and men alike.</p>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-              </div>
-
-            </div>
-          </div>
-            <!--
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-            <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
-            </p>
-            -->
+            <h1 class="cover-heading">mendicants dot business at gmail dot com</h1>
+            <p class="lead">For business inquiries, including bookings, availability, fees, and royalties.</p>
           </div>
 
           <div class="mastfoot">
@@ -134,7 +99,6 @@
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <!-- <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script> -->
-    <script src="cover.js"></script>
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
