added favicon from stanfordmendicants.com

--- a/mendicants/team.html
+++ b/mendicants/team.html
@@ -7,7 +7,8 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <!-- <link rel="icon" href="../../favicon.ico"> -->
+    <link rel="icon" href="http://stanfordmendicants.com/favicon.ico">
 
     <title>Stanford Mendicants</title>
 
@@ -49,7 +50,8 @@
                 <ul class="nav masthead-nav">
                   <li><a href="index.html">Home</a></li>
                   <li><a href="about.html">About Us</a></li>
-                  <li class="active"><a href="contact.html">Contact</a></li>
+                  <li><a href="contact.html">Contact</a></li>
+                  <li class="active"><a href="team.html">Team</a></li>
                 </ul>
               </nav>
             </div>
