--- a/mendicants-v2/index.html
+++ b/mendicants-v2/index.html
@@ -56,10 +56,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#portfolio">Team</a>
+                        <a class="page-scroll" href="#portfolio">Line-up</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -111,49 +108,6 @@
             </div>
         </div>
     </div>
-
-    <section id="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Events</h2>
-                    <hr class="primary">
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-cutlery wow bounceIn text-primary"></i>
-                        <h3>Dinner Parties</h3>
-                        <!-- <p class="text-muted">Our templates are updated regularly so they don't break.</p> -->
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-briefcase wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                        <h3>Corporate Events</h3>
-                        <!-- <p class="text-muted">You can use this theme as is, or you can make changes!</p> -->
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-birthday-cake wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                        <h3>Birthdays</h3>
-                        <!-- <p class="text-muted">We update dependencies to keep things fresh.</p> -->
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                        <h3>Weddings</h3>
-                        <!-- <p class="text-muted">You have to make your websites with love these days!</p> -->
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
@@ -453,6 +407,37 @@
                     <h2 class="section-heading">Shoot us a message!</h2>
                     <hr class="primary">
                     <p>For business inquiries, including bookings, availability, fees, and royalties. Give us your information and we will get back to you as soon as possible!</p>
+                </div>
+            </div>
+
+            <div class="row events">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-cutlery wow bounceIn text-primary"></i>
+                        <h3>Dinner Parties</h3>
+                        <!-- <p class="text-muted">Our templates are updated regularly so they don't break.</p> -->
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-briefcase wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                        <h3>Corporate Events</h3>
+                        <!-- <p class="text-muted">You can use this theme as is, or you can make changes!</p> -->
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-birthday-cake wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                        <h3>Birthdays</h3>
+                        <!-- <p class="text-muted">We update dependencies to keep things fresh.</p> -->
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                        <h3>Weddings</h3>
+                        <!-- <p class="text-muted">You have to make your websites with love these days!</p> -->
+                    </div>
                 </div>
             </div>
 <!--                 <div class="col-lg-4 col-lg-offset-2 text-center">
