--- a/mendicants-v2/index.html
+++ b/mendicants-v2/index.html
@@ -71,7 +71,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Stanford's Original A Cappella Group.</h1>
+                <h1>Stanford's Original A&nbsp;Cappella Group.</h1>
                 <hr>
                 <!-- <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p> -->
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
