moved things around on v2

--- a/mendicants-v2/index.html
+++ b/mendicants-v2/index.html
@@ -53,10 +53,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#connect">Connect</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Line-up</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -74,40 +77,41 @@
                 <h1>Stanford's Original A&nbsp;Cappella Group.</h1>
                 <hr>
                 <!-- <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p> -->
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                <a href="#contact" class="btn btn-primary btn-xl page-scroll">Bookings</a>
             </div>
         </div>
     </header>
 
-    <section class="bg-primary" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Stanford's Original A Cappella Group</h2>
-                    <hr class="light">
-                    <p class="text-faded">The Mendicants are 14 guys devoted to performing the best songs of today, yesterday and several decades ago. We pride ourselves on our wide range of styles, from gospel and barbershop to original compositions, jazz standards and contemporary pop. You can see us on stage, serenading in stairwells, or even just breaking out into song around campus. And if you can’t find us? Just follow the trail of swooning women… we won’t be far ahead.</p>
-                    <a href="#" class="btn btn-default btn-xl" data-toggle="modal" data-target="#historyModal">History</a>
-                </div>
-    </section>
-    
-    <div id="historyModal" class="modal modal-vcenter fade" role="dialog">
-        <div class="modal-dialog">
-            <!-- Modal content-->
-            <div class="modal-content history">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Our History</h4>
-                </div>
-                <div class="modal-body">    
-                    <p>Legend has it that the Mendicants were founded in 1963 by a transfer student from Yale by the name of Hank Adams. Actually that part’s not really legend. He definitely transferred here and he definitely started the group with 5 other guys. What happened next, however, has been obscured by the mists of time. They say that the group originally rehearsed only one song that they performed for the first time one lunchtime in Branner Hall, then all-female housing. As they sang, the hall rang with beautiful music and soon there wasn’t a dry eye in the house. When they finished, there was a tumultuous explosion of applause as co-ed undergrads threw themselves at the stunned Mendicants, clamoring for more. The terrified members, having only rehearsed one song, beat a hasty retreat through a convenient nearby window and immediately returned to rehearsal. The rest, as they say, is history.</p>
-                    <p>Over the years, we’ve experimented with several different looks and musical styles. We started off in tuxes and suits, but we’ve gone through everything from baseball uniforms to shorts and sandals. Ever since, we’ve been running around with “heaped spoonfuls of boyish charm” (Stanford Daily, 2002) winning the hearts of women and men alike.</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+    <section class="no-padding" id="connect">
+        <aside class="bg-dark">
+            <div class="container text-center">
+                <div class="call-to-action">
+                    <!-- <h2>Find Us On Facebook!</h2> -->
+                    <a class="btn btn-social-icon" href="https://twitter.com/the_mendicants">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                    <a class="btn btn-social-icon" href="https://www.facebook.com/pages/Stanford-Mendicants/16196500550">
+                        <i class="fa fa-facebook"></i>
+                    </a>
+                    <a class="btn btn-social-icon" href="mailto:mendicants.business@gmail.com">
+                        <i class="fa fa-envelope-o"></i>
+                    </a>
+                    <a class="btn btn-social-icon" href="https://open.spotify.com/artist/3ZBvLOZu5A9jtKO5XjHDTl">
+                        <i class="fa fa-spotify"></i>
+                    </a>
+                    <a class="btn btn-social-icon" href="https://www.youtube.com/user/StanfordMendicants">
+                        <i class="fa fa-youtube"></i>
+                    </a>
+                    <a class="btn btn-social-icon" href="https://itunes.apple.com/us/artist/the-stanford-mendicants/id845314849">
+                        <i class="fa fa-apple"></i>
+                    </a>
+                    <a class="btn btn-social-icon" href="https://squareup.com/market/the-stanford-mendicants">
+                        <i class="fa fa-shopping-cart"></i>
+                    </a>
                 </div>
             </div>
-        </div>
-    </div>
+        </aside>
+    </section>
 
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
@@ -371,34 +375,35 @@
         </div>
     </section>
 
-    <aside class="bg-dark">
-        <div class="container text-center">
-            <div class="call-to-action">
-                <!-- <h2>Find Us On Facebook!</h2> -->
-                <a class="btn btn-social-icon" href="https://twitter.com/the_mendicants">
-                    <i class="fa fa-twitter"></i>
-                </a>
-                <a class="btn btn-social-icon" href="https://www.facebook.com/pages/Stanford-Mendicants/16196500550">
-                    <i class="fa fa-facebook"></i>
-                </a>
-                <a class="btn btn-social-icon" href="mailto:mendicants.business@gmail.com">
-                    <i class="fa fa-envelope-o"></i>
-                </a>
-                <a class="btn btn-social-icon" href="https://open.spotify.com/artist/3ZBvLOZu5A9jtKO5XjHDTl">
-                    <i class="fa fa-spotify"></i>
-                </a>
-                <a class="btn btn-social-icon" href="https://www.youtube.com/user/StanfordMendicants">
-                    <i class="fa fa-youtube"></i>
-                </a>
-                <a class="btn btn-social-icon" href="https://itunes.apple.com/us/artist/the-stanford-mendicants/id845314849">
-                    <i class="fa fa-apple"></i>
-                </a>
-                <a class="btn btn-social-icon" href="https://squareup.com/market/the-stanford-mendicants">
-                    <i class="fa fa-shopping-cart"></i>
-                </a>
+    <section class="bg-primary" id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Stanford's Original A Cappella Group</h2>
+                    <hr class="light">
+                    <p class="text-faded">The Mendicants are 14 guys devoted to performing the best songs of today, yesterday and several decades ago. We pride ourselves on our wide range of styles, from gospel and barbershop to original compositions, jazz standards and contemporary pop. You can see us on stage, serenading in stairwells, or even just breaking out into song around campus. And if you can’t find us? Just follow the trail of swooning women… we won’t be far ahead.</p>
+                    <a href="#" class="btn btn-default btn-xl" data-toggle="modal" data-target="#historyModal">History</a>
+                </div>
+    </section>
+    
+    <div id="historyModal" class="modal modal-vcenter fade" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content history">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Our History</h4>
+                </div>
+                <div class="modal-body">    
+                    <p>Legend has it that the Mendicants were founded in 1963 by a transfer student from Yale by the name of Hank Adams. Actually that part’s not really legend. He definitely transferred here and he definitely started the group with 5 other guys. What happened next, however, has been obscured by the mists of time. They say that the group originally rehearsed only one song that they performed for the first time one lunchtime in Branner Hall, then all-female housing. As they sang, the hall rang with beautiful music and soon there wasn’t a dry eye in the house. When they finished, there was a tumultuous explosion of applause as co-ed undergrads threw themselves at the stunned Mendicants, clamoring for more. The terrified members, having only rehearsed one song, beat a hasty retreat through a convenient nearby window and immediately returned to rehearsal. The rest, as they say, is history.</p>
+                    <p>Over the years, we’ve experimented with several different looks and musical styles. We started off in tuxes and suits, but we’ve gone through everything from baseball uniforms to shorts and sandals. Ever since, we’ve been running around with “heaped spoonfuls of boyish charm” (Stanford Daily, 2002) winning the hearts of women and men alike.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
-    </aside>
+    </div>
 
     <section id="contact">
         <div class="container">
@@ -501,6 +506,8 @@
             </div>
         </div>
     </section>
+
+
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
