addead header for social media links, padding for sides of form for mobile

--- a/mendicants-v2/index.html
+++ b/mendicants-v2/index.html
@@ -86,7 +86,8 @@
         <aside class="bg-dark">
             <div class="container text-center">
                 <div class="call-to-action">
-                    <!-- <h2>Find Us On Facebook!</h2> -->
+                    <h2>Check Out Our Music, Videos, and More</h2>
+                    <hr>
                     <a class="btn btn-social-icon" href="https://twitter.com/the_mendicants">
                         <i class="fa fa-twitter"></i>
                     </a>
