--- a/mendicants-v2/index.html
+++ b/mendicants-v2/index.html
@@ -75,7 +75,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Stanford's Original A&nbsp;Cappella Group.</h1>
+                <h1>Stanford's Original A&nbsp;Cappella Group</h1>
                 <hr>
                 <!-- <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p> -->
                 <a href="#contact" class="btn btn-primary btn-xl page-scroll">Bookings</a>
@@ -477,7 +477,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="telephone" class="col-sm-2 control-label">Phone</label>
+                        <label for="telephone" class="col-sm-2 control-label">Phone (optional)</label>
                         <div class="col-sm-10">
                             <input type="telephone" class="form-control" id="telephone" name="telephone" placeholder="(123) 456-789" value="">
                         </div>
