--- a/mendicants-v2/index.html
+++ b/mendicants-v2/index.html
@@ -463,7 +463,7 @@
                     <input type="text" value="comments" placeholder="Description" />
                 </form> -->
             <div class="row">
-                <form class="form-horizontal" role="form" method="post" action="http://stanfordmendicants.com/booking_mail.php">
+                <form class="form-horizontal" role="form" method="post" action="/booking_mail.php">
                     <div class="form-group">
                         <label for="name" class="col-sm-2 control-label">Name</label>
                         <div class="col-sm-10">
