--- a/mendicants-v2/index.html
+++ b/mendicants-v2/index.html
@@ -122,10 +122,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">What To Expect From Mendicant Auditions 2015</h2>
+                    <h2 class="section-heading">Mendicant Auditions 2015</h2>
                     <hr class="light">
-                    <p class="text-faded">So you sing in the shower? In a band? With your dog? You like to pretend you're a walking drum kit? Then step right up because we need you in the Mendicants. Auditions begin Tuesday September 22, but the whole week before we'll be hanging out in White Plaza so you can get to know us a little better. We'll also be performing at the all a cappella O Show the evening of Monday September 21 in Memorial Auditorium, and we've got quite the show planned so don't miss it!</p>
-                    <p class="text-faded">Check out the rest of our website and our <a class="auditions" href="https://www.youtube.com/user/StanfordMendicants">YouTube Channel</a> to get a better sense of the group, and feel free to reach out to us using the contact from at the bottom of this page. We'll be putting up an audition sign-up form right here soon. Can't wait to see you rock your stuff at auditions!</p>
+                    <p class="text-faded">
+                        So you sing in the shower? In a band? With your dog? You like to pretend you're a walking drum kit? Then step right up because we need you in the Mendicants. 
+                    </p>
+                    <p>
+                        <strong>Auditions begin Tuesday, September 22</strong><span class="text-faded">, but the whole week before we'll be hanging out in White Plaza so you can get to know us a little better. We'll also be performing at the </span><strong>O Show a cappella showcase </strong><span class="text-faded">on</span><strong> Monday, September 21</strong><span class="text-faded"> in Memorial Auditorium, and we've got quite the show planned so don't miss it!
+                    </span></p>
+                    <p><span class="text-faded">
+                        Check out the rest of our website and our <a class="auditions" href="https://www.youtube.com/user/StanfordMendicants">YouTube Channel</a> to get a better sense of the group, and feel free to reach out to us using the contact from at the bottom of this page. We'll be putting up an</span><strong> audition sign-up form</strong><span class="text-faded"> right here on </span><strong>Wednesday, September 17th</strong><span class="text-faded">. Enrolled Stanford students of any class are welcome to audition, not just freshmen. Can't wait to see you rock your stuff at auditions!
+                    <span/></p>
+                    <div>- The Mendicants</div>
                 </div>
     </section>
 
