--- a/mendicants-v2/index.html
+++ b/mendicants-v2/index.html
@@ -128,19 +128,27 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Mendicant Auditions 2015</h2>
                     <hr class="light">
-                    <p class="text-faded">
-                        So you sing in the shower? In a band? With your dog? You like to pretend you're a walking drum kit? Then step right up because we need you in the Mendicants. 
-                    </p>
                     <p>
                         <strong>Auditions begin Tuesday, September 22</strong><span class="text-faded">, but the whole week before we'll be hanging out in White Plaza so you can get to know us a little better. We'll also be performing at the </span><strong>O Show a cappella showcase </strong><span class="text-faded">on</span><strong> Monday, September 21</strong><span class="text-faded"> in Memorial Auditorium, and we've got quite the show planned so don't miss it!
                     </span></p>
                     <p><span class="text-faded">
-                        Check out the rest of our website and our <a class="auditions" href="https://www.youtube.com/user/StanfordMendicants">YouTube Channel</a> to get a better sense of the group, and feel free to reach out to us using the contact from at the bottom of this page. We'll be putting up an</span><strong> audition sign-up form</strong><span class="text-faded"> right here on </span><strong>Wednesday, September 17th</strong><span class="text-faded">. Enrolled Stanford students of any class are welcome to audition, not just freshmen. Can't wait to see you rock your stuff at auditions!
+                        Enrolled Stanford students of any class are welcome to audition, not just freshmen. Can't wait to see you rock your stuff at auditions!
                     <span/></p>
                     <div>- The Mendicants</div>
                 </div>
+            </div>
+        </div>
     </section>
 
+    <section class="no-padding" id="signup">
+        <aside class="bg-dark">
+            <div class="container text-center">
+                <div class="call-to-action">
+                    <h2 class="section-heading"><a href="https://docs.google.com/a/stanford.edu/spreadsheets/d/1Ah85M-HJYbuYMmIMIVs2rCHCR8V8TZNPGplZwpa_6Tc/edit?usp=sharing"><i class="fa fa-pencil"></i> Sign up for auditions now!</a></h2>
+                </div>
+            </div>
+        </aside>
+    </section>
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter">
@@ -213,7 +221,7 @@
                                     Baritone
                                 </div>
                                 <div class="project-name">
-                                    Dan
+                                    Dan Kahn
                                 </div>
                             </div>
                         </div>
