--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!doctype html>
 <head>
   <title>Ben Isaacs</title>
+  <style>
+    h1 {
+      font-family: Arial, Helvetica, sans-serif;
+    }
+  </style>
 </head>
 
 <body>
-  t b d
+  <h1>I like people and code.</h1>
 </body>
 </html>
