--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     h1 {
       font-family: Arial, Helvetica, sans-serif;
     }
+    .heading {
+      width: 600px;
+      max-width: 80%;
+      margin: auto;
+      margin-top: 150px;
+      text-align: center;
+    }
   </style>
 </head>
 
 <body>
-  <h1>I like people and code.</h1>
+  <div class="heading">
+    <h1>I like people and code.</h1>
+  </div>
 </body>
 </html>
